--- a/ogrenci/index.html
+++ b/ogrenci/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Sincan İMKB BİLİŞİM TEKNOLOJİLERİ</title>
 <body background=resimler/arkaplan.jpg alink=red link=white vlink=white >
-<table align=center border=1 width=1200 height=600>
+<table align=center border=0 width=1200 height=600>
    <tr><td height=150 colspan=2><img src=resimler/banner.jpg >
        
    <tr><td align=center width=200><a href="index.html"><font type="comic sans ms" size=5 >Anasayfa</a></font>
@@ -20,7 +20,7 @@
    <tr><td align=center><a href="dosyalar/tanitim.pdf"target=frame><font type="comic sans ms" size=5 >Tanıtım</a></font>
    
    
-   <tr><td align=center><a href="uyeol.html"><font type="comic sans ms" size=5 >Üye Ol</a></font>
+   <tr><td align=center><a href="uyeol.html"target=frame><font type="comic sans ms" size=5 >Üye Ol</a></font>
    
    <tr><td height=30> 
    
